--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "json": "^11.0.0",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "server": "^1.0.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
