--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "json": "^11.0.0",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.545.0",
