--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "node index.js",
-    "server": "json-server --watch db/db.json --port 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.13.1",
@@ -18,7 +16,8 @@
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "server": "^1.0.42"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
