--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "express": "^5.2.1",
     "json": "^11.0.0",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.545.0",
