--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^1.13.1",
     "express": "^4.18.2",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
